--- a/boutique.html
+++ b/boutique.html
@@ -53,16 +53,16 @@
                         </h2>
                     </div>
                 </div>
-                <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/adj-mug.jpg"
-                    alt="Mug drôle" />
+                <a href="https://www.amazon.fr/quotedazur-Mug-Bonne-Humeur-Gueule/dp/B09BZPTX3R/ref=sr_1_6?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1FPA07D4I93L0&keywords=mug&qid=1689512346&sprefix=mug%2Caps%2C90&sr=8-6&th=1">  <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/adj-mug.jpg"
+                    alt="Mug drôle" /></a>
+                    
                 <div class="product-item-description d-flex me-auto">
                     <div class="bg-faded p-5 rounded"><br class="mb-0">Lorem ipsum, dolor sit amet consectetur
                         adipisicing elit. Ipsam quidem repellendus minus animi obcaecati recusandae, nam, labore
                         repudiandae sed repellat natus quis est ab omnis voluptas, ullam sunt officia nesciunt.
                         </br>
                         <a
-                            href="https://www.amazon.fr/quotedazur-Mug-Bonne-Humeur-Gueule/dp/B09BZPTX3R/ref=sr_1_6?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1FPA07D4I93L0&keywords=mug&qid=1689512346&sprefix=mug%2Caps%2C90&sr=8-6&th=1">Clique
-                            ici pour venter ton mug à ton boulot</a>
+                            href="./article/accueil.html">Clique ici si tu veux voir d'autres ton mug à prendre pour le boulot</a>
                         </p>
                     </div>
                 </div>
@@ -80,8 +80,9 @@
                         </h2>
                     </div>
                 </div>
-                <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/sweat.jpg"
-                    alt="Sweat drôle" />
+                <a href="https://www.amazon.fr/Prochaine-Connerie-En-Cours-Chargement/dp/B08HLCBD5L/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UPMKGW707LAT&keywords=sweat+dr%C3%B4le&qid=1689512619&sprefix=sweat+dr%C3%B4le%2Caps%2C79&sr=8-12"><img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/sweat.jpg"
+                    alt="Sweat drôle" /></a>
+                    
                 <div class="product-item-description d-flex ms-auto">
                     <div class="bg-faded p-5 rounded">
                         <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis odit
@@ -89,8 +90,8 @@
                             maxime magnam. Quisquam officia a quidem!
                             <br>
                             <a
-                                href="https://www.amazon.fr/Prochaine-Connerie-En-Cours-Chargement/dp/B08HLCBD5L/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UPMKGW707LAT&keywords=sweat+dr%C3%B4le&qid=1689512619&sprefix=sweat+dr%C3%B4le%2Caps%2C79&sr=8-12">Clique
-                                ici pour ne plus avoir froid</a>
+                                href="./article/accueil.html">Clique
+                                ici pour voir d'autres sweats</a>
                         </p>
                     </div>
                 </div>
@@ -108,7 +109,8 @@
                         </h2>
                     </div>
                 </div>
-                <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/pins.PNG"
+                <a href="https://www.amazon.fr/Prochaine-Connerie-En-Cours-Chargement/dp/B08HLCBD5L/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UPMKGW707LAT&keywords=sweat+dr%C3%B4le&qid=1689512619&sprefix=sweat+dr%C3%B4le%2Caps%2C79&sr=8-12"> <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/pins.PNG" >
+                </a>
                     alt="Pin drôle à accrocher sur le vêtement" />
                 <div class="product-item-description d-flex me-auto">
                     <div class="bg-faded p-5 rounded">
@@ -117,8 +119,8 @@
                             laborum, magnam nobis? Expedita nostrum incidunt esse?
                             <br>
                             <a
-                                href="https://www.etsy.com/fr/listing/1488163448/collection-de-broches-en-email-de?ga_order=most_relevant&ga_search_type=all&ga_view_type=gallery&ga_search_query=pins+rigolo&ref=sr_gallery-1-1&pro=1&organic_search_click=1">Clique
-                                ici pour agrémenter ton magnifique sweat que tu viens d'acheter...</a>
+                                href="./article/accueil.html">Clique
+                                ici pour trouver d'autres pins pour le sweat que tu viens d'acheter...</a>
                         </p>
                     </div>
                 </div>
